// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storyshots views/routes/workspace/visualization/Page with some blocks, centered layout 1`] = `
<div
  style="height: 100%;"
>
  <div
    class="lck-layout-classic"
    layout="centered"
  >
    <div
      class="lck-page-content"
      style="margin-right: 0px;"
    >
      <!---->
       
      <div
        class="lck-color-title p-m-4"
      >
        <h1>
          
        </h1>
      </div>
       
      <div
        class="lck-container-parent p-mx-2"
      />
    </div>
  </div>
</div>
`;

exports[`storyshots views/routes/workspace/visualization/Page with some blocks, default layout 1`] = `
<div
  style="height: 100%;"
>
  <div
    class="lck-layout-classic"
    editmode="true"
  >
    <div
      class="lck-page-content"
      style="margin-right: 0px;"
    >
      <!---->
       
      <div
        class="lck-color-title p-m-4"
      >
        <h1>
          
        </h1>
      </div>
       
      <div
        class="lck-container-parent p-mx-2"
      />
    </div>
  </div>
</div>
`;

exports[`storyshots views/routes/workspace/visualization/Page with some blocks, flex layout 1`] = `
<div
  style="height: 100%;"
>
  <div
    class="lck-layout-classic"
    layout="flex"
  >
    <div
      class="lck-page-content"
      style="margin-right: 0px;"
    >
      <!---->
       
      <div
        class="lck-color-title p-m-4"
      >
        <h1>
          
        </h1>
      </div>
       
      <div
        class="lck-container-parent p-mx-2"
      />
    </div>
  </div>
</div>
`;
